# qint

./: README  TODO  install  uninstall
misc/: dovecot.conf  (+12 more)
sources/isoqlog-2.2.1/: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.status  configure  configure.in
sources/isoqlog-2.2.1/CVS/: Entries  Repository
sources/isoqlog-2.2.1/autom4te.cache/: output.0  requests  traces.0
sources/isoqlog-2.2.1/data/: Makefile  Makefile.am  Makefile.in  isoqlog.conf-dist.in
sources/isoqlog-2.2.1/data/CVS/: Entries  Repository
sources/isoqlog-2.2.1/data/htmltemp/: Makefile  Makefile.am  Makefile.in
sources/isoqlog-2.2.1/data/lang/: Makefile  Makefile.am  Makefile.in  danish
sources/isoqlog-2.2.1/isoqlog/: Dir.c  Global.h  Html.c  Makefile  Makefile.am  Makefile.in  Parser.c  config.h  config.h.in  isoqlog  loadconfig.c  main.c
sources/isoqlog-2.2.1/isoqlog/.deps/: Data.Po  Dir.Po  Html.Po  LangCfg.Po  Parser.Po  Store.Po  loadconfig.Po  main.Po
sources/isoqlog-2.2.1/isoqlog/CVS/: Entries  Repository
sources/isoqlog-2.2.1/tr/: BENIOKU  DEGISIKLIKLER  KOPYALAMA  KURULUM  Makefile  Makefile.am  Makefile.in  YAZARLAR
sources/maildrop-2.2.0/: ChangeLog  INSTALL  INSTALL.html  Makefile  Makefile.am  Makefile.in  README  README.html  README.html.in  UPGRADE  UPGRADE.html  config.status  configure  configure.in  dbobj.config  dbobj.h  dbobj.h.in  deliverquota.html  libtool  lockmail.html  mailbot.1  maildir.html  maildirmake.html  maildrop.1  maildrop.lpspec  maildrop.lpspec.in  maildrop.spec  maildrop.spec.in  maildropex.7  maildropfilter.html  maildropgdbm.7  maildropgdbm.html  maildroptips.txt  makedat.html  reformail.1  reformime.1  rfc822.html
sources/maildrop-2.2.0/bdbobj/: Makefile  Makefile.in  bdbobj2.c  bdbobj3.c  config.h  config.h.in  config.status  configure  configure.in  libtool
sources/maildrop-2.2.0/gdbmobj/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  gdbmobj.h  gdbmobj.lo  gdbmobj2.lo  gdbmobj3.lo  libgdbmobj.la  libtool  testgdbm
sources/maildrop-2.2.0/liblock/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  liblock.h  liblock.la  libtool  lockdaemon.lo  lockfcntl.lo  lockmail  lockmail.1  mail.lo
sources/maildrop-2.2.0/maildir/: Makefile  Makefile.in  README.sharedfolders.txt  autoresponse.lo  autoresponsequota.h  config.h  config.h.in  config.status  configure  deliverquota  deliverquota.8  deliverquota.8.in  deliverquota.c  deliverquota.html.in  libmaildir.la  libtool  loginexec.lo  maildir.5  maildiracl  maildiracl.1.in  maildiracl.html.in  maildiraclt.lo  maildiraclttest  maildircache.lo  maildircreate.lo  maildirdelfolder.lo  maildirfilename.lo  maildirfilter.c  maildirfilter.lo  maildirfilter2.lo  maildirfilterconfig.h  maildirflags.lo  maildirgetnew.lo  maildirgetquota.lo  maildirinfo.lo  maildirkeywords.lo  maildirkeywords2.lo  maildirkeywords3.lo  maildirkeywords4.lo  maildirkw  (+32 more)
sources/maildrop-2.2.0/maildrop/: Makefile  Makefile.am  Makefile.in  README.html  README.html.in  alarm.C  alarm.h  alarm.lo  alarmsleep.C  alarmsleep.h  alarmsleep.lo  alarmtimer.C  alarmtimer.h  alarmtimer.lo  buffer.C  buffer.h  buffer.lo  config.h  config.h.in  config.status  configure  configure.in  deliver.C  deliverdotlock.C  deliverdotlock.h  dotlock.C  dotlock.h  dotlock.lo  dotlockmaildrop.C  dotlockrefresh.C  dotlockrefresh.h  dotlockrefresh.lo  exittrap.C  exittrap.h  exittrap.lo  filelock.C  filelock.h  filter.C  formatmbox.C  formatmbox.h  (+78 more)
sources/maildrop-2.2.0/makedat/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  libtool  makedat  makedatprog
sources/maildrop-2.2.0/numlib/: Makefile  Makefile.in  atotimet.lo  atouidt.lo  changeuidgid.lo  config.h  config.h.in  config.status  configure  libnumlib.la  libtool  strdevt.lo  strgidt.lo  strhdevt.lo  strhinot.lo  strhpidt.lo  strhtimet.lo  strinot.lo  strofft.lo  strpidt.lo  strsize.lo  strsizet.lo  strtimet.lo  struidt.lo
sources/maildrop-2.2.0/rfc2045/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  headercheck  librfc2045.la  libtool  makemime  makemime.html  reformime  reformime.html  rfc2045.html  rfc2045.lo  rfc2045_config.h  rfc2045_config.h.in  rfc2045_fromfd.lo  rfc2045acchk.lo  rfc2045acprep.lo  rfc2045appendurl.lo  rfc2045cdecode.lo  rfc2045charset.h  rfc2045decode.lo  rfc2045decodemimesection.lo  rfc2045decodemimesectionu.lo  rfc2045enomem.lo  rfc2045find.lo  rfc2045header.lo  rfc2045mkboundary.lo  rfc2045reply.lo  rfc2045replyplain.lo  rfc2045replyunicode.lo  rfc2045rewrite.lo  rfc2045searchcontenttype.lo  rfc2045tryboundary.lo  rfc2045xdump.lo  rfc2231.lo  rfc2231encode.lo  rfc2646.lo  (+5 more)
sources/maildrop-2.2.0/rfc822/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  encodeautodetect.lo  imaprefs.lo  imapsubj.lo  libencode.la  librfc822.la  libtool  reftest  rfc2047.h  rfc2047.lo  rfc2047u.lo  rfc822.c  rfc822.h  rfc822.lo  rfc822_getaddr.lo  rfc822_getaddrs.lo  rfc822_mkdate.lo  rfc822_parsedt.lo  rfc822hdr.lo  testsuite  testsuite.txt
sources/maildrop-2.2.0/unicode/: Makefile  Makefile.am  Makefile.in  big5.lo  charsetlist.c  charsetlist.lo  config.status  configure  configure.in  eucjp.c  eucjp.lo  gb2312.lo  ibm437.lo  ibm775.lo  ibm850.lo  ibm852.lo  ibm855.lo  ibm857.lo  ibm860.lo  ibm861.lo  ibm862.lo  ibm863.lo  ibm864.lo  ibm864convert.lo  ibm865.lo  ibm866.lo  ibm869.lo  iso2022jp.lo  iso8859.lo  iso88591.lo  iso885910.lo  iso885913.lo  iso885914.lo  iso885915.lo  iso88592.lo  iso88593.lo  iso88594.lo  iso88595.lo  iso88596.lo  iso88597.lo  (+33 more)
sources/simscan-1.4.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs  simscan  simscan.c  simscan.c.bak  simscan.c.bakup  simscan.c.good  simscan.c.good.onechar  simscanmk  simscanmk.c
sources/simscan-1.4.0/CVS/: Entries  Repository
sources/simscan-1.4.0/autom4te.cache/: output.0  traces.0
(+979 files in other folders)
