## Process this file with automake to produce Makefile.in
## Created by Ozkan KIRIK
SUBDIRS = data isoqlog tr 

isoqlog_docdir = ${prefix}/share/doc/isoqlog
isoqlog_doc_DATA = AUTHORS \
		ChangeLog \
		COPYING \
		EnderUNIX \
		FAQ \
		INSTALL \
		NEWS \
		README \
		README.Turkish \
		TODO 

EXTRA_DIST = $(isoqlog_doc_DATA)

AUTOMAKE_OPTIONS = foreign
