# Process this file with autoconf to produce a configure script.

AC_INIT(isoqlog, 2.2.1, bug-report@enderunix.org)
AC_CANONICAL_SYSTEM
AC_CONFIG_SRCDIR([isoqlog/Global.h])
AM_CONFIG_HEADER(isoqlog/config.h)
#AC_CONFIG_HEADER macro used by autoheader
#AC_CONFIG_HEADER(isoqlog/config.h)
AM_INIT_AUTOMAKE(isoqlog, 2.2.1)


# Checks for programs.
AC_PROG_CC

unset CDPATH
dnl make /usr/local the default for the installation
#AC_PREFIX_DEFAULT(/usr/local)

if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
fi
# Checks for libraries.

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h strings.h unistd.h], [], \
			AC_MSG_ERROR([Development headers not found]))

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([gethostname memset mkdir strcasecmp strdup strerror strstr], [], \
			AC_MSG_ERROR([functions not found]))
AC_DEFINE_UNQUOTED(CONFIGFILE, "${prefix}/etc/isoqlog.conf", [Configuration file path])

AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ isoqlog/Makefile ])
AC_CONFIG_FILES([ data/Makefile ])
AC_CONFIG_FILES([ data/isoqlog.conf-dist ])
AC_CONFIG_FILES([ data/htmltemp/Makefile ])
AC_CONFIG_FILES([ data/htmltemp/images/Makefile ])
AC_CONFIG_FILES([ data/htmltemp/library/Makefile ])
AC_CONFIG_FILES([ data/lang/Makefile ])
AC_CONFIG_FILES([ tr/Makefile ])
AC_OUTPUT
