## Process this file with automake to produce Makefile.in
## Created by Ozkan KIRIK

SUBDIRS = images library 

isoqlog_htmltempdir = ${prefix}/share/isoqlog/htmltemp
isoqlog_htmltemp_DATA = daily.html \
			domain.html \
			generaldaily.html \
			generaldomain.html \
			generalmonthly.html \
			generalyearly.html \
			index.html \
			monthly.html \
			yearly.html

EXTRA_DIST = $(isoqlog_htmltemp_DATA)
