## Process this file with automake to produce Makefile.in
## Created by Ozkan KIRIK

isoqlog_langdir = ${prefix}/share/isoqlog/lang
isoqlog_lang_DATA = turkish swedish spanish russian portuguese polish dutch english finnish french german italian norwegian czech romana bulgarian danish

EXTRA_DIST = $(isoqlog_lang_DATA)
